--- a/index.html
+++ b/index.html
@@ -133,8 +133,10 @@
             <div id="carouselForSectionTestimoni" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselForSectionTestimoni" data-slide-to="0" class="active"></li>
+                    <!--
                     <li data-target="#carouselForSectionTestimoni" data-slide-to="1"></li>
                     <li data-target="#carouselForSectionTestimoni" data-slide-to="2"></li>
+                    -->
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -168,6 +170,7 @@
                             </div>
                         </div>
                     </div>
+                    <!--
                     <div class="carousel-item">
                         <div class="container">
                             <div class="d-flex align-items-center bd-highlight mb-1 testi-poin p-2">
@@ -211,27 +214,27 @@
                                 </div>
                             </div>
                             <div class="d-flex align-items-center bd-highlight mb-1 testi-poin p-2">
-                                <!-- <div class="p-2 bd-highlight img">
+                                <div class="p-2 bd-highlight img">
                                     <img src="assets/v2/images/testimoni-company-logo/" alt="">
-                                </div> -->
+                                </div>
                                 <div class="p-3 fle2-grow-1 bd-highlight">
                                     <h4>CV. Ricka Perkasa Mandiri</h4>
                                     <p>Layanan yang diberikan oleh staf F-Plat Indonesia sangat bagus, jasa yang ditawarkan juga berguna untuk meningkatkan daya jual dan promosi perusahaan kami.</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center bd-highlight mb-1 testi-poin p-2">
-                                <!-- <div class="p-2 bd-highlight img">
+                                <div class="p-2 bd-highlight img">
                                     <img src="assets/v2/images/testimoni-company-logo/" alt="">
-                                </div> -->
+                                </div>
                                 <div class="p-3 fle2-grow-1 bd-highlight">
                                     <h4>Aru coffee</h4>
                                     <p>Jasa dari PT. Fortuna Platina Indonesia yaitu Traffic Support bagus untuk promosi produk dan menambah jumlah followers instagram kami.</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center bd-highlight mb-1 testi-poin p-2">
-                                <!-- <div class="p-2 bd-highlight img">
+                                <div class="p-2 bd-highlight img">
                                     <img src="assets/v2/images/testimoni-company-logo/" alt="">
-                                </div> -->
+                                </div>
                                 <div class="p-3 fle2-grow-1 bd-highlight">
                                     <h4>PT. Ajwad</h4>
                                     <p>Jasa Traffic Support dari PT. Fortuna Platina Indonesia sangat membantu perusahaan kami.
@@ -240,6 +243,7 @@
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
             <div class="mb-5 pb-5"></div>
